# invenioScan-backend

./: .gitignore  README.md  alembic.ini  conftest.py  main.py  pyproject.toml
invenioscan/: app.py  auth.py  database.py  dependencies.py  email.py  isbn_lookup.py  models.py  qr.py  schemas.py  settings.py  uploads.py  web.py
invenioscan/adapters/: __init__.py  base.py  invenio_ils.py
invenioscan/api/: __init__.py  routes_admin.py  routes_auth.py  routes_books.py  routes_copies.py  routes_ingest.py  routes_qr.py  routes_shelves.py  routes_uploads.py
invenioscan/static/css/: style.css
invenioscan/templates/: admin_users.html  base.html  book_detail.html  book_form.html  books.html  index.html  login.html  qr.html  register.html  shelf_detail.html  shelf_form.html  shelves.html
invenioscan/templates/partials/: book_rows.html
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: test_integration.py  test_invenio_ils_adapter.py  test_isbn_lookup.py  test_qr_sheet.py
