[project]
name = "invenioscan"
version = "0.2.0"
description = "Book position tracker with FastAPI backend, web UI, and mobile scanning app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.12",
	"python-multipart>=0.0.20",
	"pydantic-settings>=2.8.1",
	"pyjwt>=2.10.1",
	"bcrypt>=4.0.0",
	"sqlmodel>=0.0.22",
	"aiosqlite>=0.21.0",
	"jinja2>=3.1.5",
	"qrcode[pil]>=8.2",
	"uvicorn[standard]>=0.34.0",
	"greenlet>=3.3.2",
	"httpx>=0.28",
	"alembic>=1.15",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.5",
	"pytest-asyncio>=0.26.0",
	"httpx>=0.28.1",
	"ruff>=0.11.2",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
